--- a/MathematicalLinguisticsTask4/MathematicalLinguisticsTask4/MainWindow.xaml
+++ b/MathematicalLinguisticsTask4/MathematicalLinguisticsTask4/MainWindow.xaml
@@ -17,7 +17,7 @@
             Margin="10,10,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
-            TextWrapping="Wrap" />
+            TextWrapping="Wrap" TextChanged="textBoxInfixNotation_TextChanged" />
         <TextBox
             x:Name="textBoxPostfixNotation"
             Width="497"
